Added Raised buttons

--- a/public/_partials/builder/buttons-sizes.jade
+++ b/public/_partials/builder/buttons-sizes.jade
@@ -1,4 +1,4 @@
-section(id="sizes" class="showcase" data-type="example" data-name="sizes")
+section(id="sizes" class="showcase" data-type="build" data-name="sizes")
   h3 Shapes &amp; Sizes
 
   section.showcase-examples
