--- a/public/_partials/builder/buttons-raised.jade
+++ b/public/_partials/builder/buttons-raised.jade
@@ -1,4 +1,4 @@
-section(id="raised" class="showcase" data-type="example" data-name="raised")
+section(id="raised" class="showcase" data-type="build" data-name="raised")
   h3 Raised Buttons
 
   section.showcase-examples.
