--- a/public/_partials/builder/buttons-wrappers.jade
+++ b/public/_partials/builder/buttons-wrappers.jade
@@ -1,4 +1,4 @@
-section(id="wrappers" class="showcase" data-type="example" data-name="wrappers")
+section(id="wrappers" class="showcase" data-type="build" data-name="wrappers")
   h3 Button Wrappers
 
   section.showcase-examples.
