--- a/public/_partials/builder/buttons-longshadow.jade
+++ b/public/_partials/builder/buttons-longshadow.jade
@@ -1,4 +1,4 @@
-section(id="longshadow" class="showcase" data-type="example" data-name="longshadow")
+section(id="longshadow" class="showcase" data-type="build" data-name="longshadow")
 	h3 Longshadow
 
 	section.showcase-examples.
