--- a/public/_partials/builder/buttons-raised.jade
+++ b/public/_partials/builder/buttons-raised.jade
@@ -5,8 +5,8 @@ section(id="raised" class="showcase" data-type="build" data-name="raised")
     <a href="#" class="button button-raised">press me</a>
     <a href="#" class="button button-primary button-raised">press me</a>
     <a href="#" class="button button-raised button-pill">press me</a>
-    <a href="#" class="button button-pill button-action">press me</a>
-    <a href="#" class="button button-pill button-highlight">press me</a>
-    <a href="#" class="button button-pill button-caution">press me</a>
+    <a href="#" class="button button-pill button-raised button-action">press me</a>
+    <a href="#" class="button button-pill button-raised button-highlight">press me</a>
+    <a href="#" class="button button-pill button-raised button-caution">press me</a>
   code
 
