--- a/public/blog/_layout.jade
+++ b/public/blog/_layout.jade
@@ -1,14 +1,18 @@
-doctype html
+doctype
 html
   head
-    meta(charset="utf-8")
-    meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")
-    meta(name="description" content="A highly customizable CSS Buttons framework built with Sass and Compass. The Buttons framework is ready to use and easy to customize")
-    meta(name="viewport" content="width=device-width")
+    link(rel="stylesheet" href="css/libs/vendor.css")
+    link(rel="stylesheet" href="fonts/icomoon/style.css")
+    link(rel="stylesheet" href="css/site.css")
+    script(src="//use.typekit.net/tpn3thx.js")
+    script(type='text/javascript').
+      try{Typekit.load();}catch(e){}
 
-    // PAGE TITLE
-    title BLOG
-
-  body
+  body(class="background-mantle")
+    != partial('../_partials/blog/header')
 
     != yield
+
+    != partial('../_partials/blog/comments')
+
+    script(src="js/libs/vendor.js")
