--- a/resources/scss/_options.scss
+++ b/resources/scss/_options.scss
@@ -3,6 +3,7 @@
 *
 */
 $brand-font: "proxima-nova", Helvetica, Verdana, Arial, "Lucida Grande", sans-serif;
+$serif-font: Georgia, Times, serif;
 
 /*
 * Colors
