--- a/public/_partials/nav.jade
+++ b/public/_partials/nav.jade
@@ -1,16 +1,19 @@
 nav(class="main-nav l-layer-5 l-pinned-top")
-  h1
-    a(href="/") Unicorn UI
+  div(class="background-mantle main-nav-stripe")
 
-  ul
-    li
-      a(href="/libraries") Libraries
+  .main-nav-inner
+    h1
+      a(href="/") Unicorn UI
 
-    li
-      a(href="/books") Books
+    ul
+      li
+        a(href="/libraries") Libraries
 
-    li
-      a(href="/blog") Blog
+      li
+        a(href="/books") Books
 
-    li
-      a(href="/about") About
+      li
+        a(href="/blog") Blog
+
+      li
+        a(href="/about") About
