--- a/resources/scss/_options.scss
+++ b/resources/scss/_options.scss
@@ -11,11 +11,11 @@ $serif-font: Georgia, Times, serif;
 */
 $white: #FFFFFF;
 $black: #000000;
-$lightBlack: #333333;
 $gray: #a9adb1;
 $light: #e8edf2;
 $alice: #229ffd;
-
+$steel: #455A64;
+$midnight: #2c3e50;
 
 /*
 * Layer Indexing
