--- a/resources/scss/module/_nav.scss
+++ b/resources/scss/module/_nav.scss
@@ -1,6 +1,16 @@
+.main-nav-stripe {
+  height: 10px;
+}
+
+.main-nav-inner {
+  height: 10px;
+  width: 800px;
+  margin: 0px auto;
+}
+
 .main-nav {
   height: 80px;
-  padding: 0px 20px;
+  padding: 0px 0px;
   background: $white;
   opacity: .95;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, .2);
@@ -14,7 +24,7 @@
     line-height: 70px;
   }
 
-  > h1 {
+  h1 {
     float: left;
     font-weight: 200;
     margin: 0px;
@@ -24,6 +34,8 @@
     margin: 0px;
     float: right;
     list-style-type: none;
+    font-size: 18px;
+    font-weight: 100;
 
     li {
       float: right;
