--- a/resources/scss/_options.scss
+++ b/resources/scss/_options.scss
@@ -39,6 +39,6 @@ $layer-10: 10;
 *
 */
 
-$phone-breakpoint: 480px;
-$tablet-breakpoint: 940px;
+$standard-breakpoint: 800px;
+$large-breakpoint: 1200px;
 $vertical-breakpoint: 620px;
