--- a/resources/scss/_theme.scss
+++ b/resources/scss/_theme.scss
@@ -9,7 +9,6 @@
   color: $white;
 }
 
-.background-grid {
+.background-stucco {
   background-color: #f0f5f9;
-  background: url(/images/backgrounds/noisy_grid.png) top left repeat;
 }
