more social share widgets

--- a/public/_partials/scripts.jade
+++ b/public/_partials/scripts.jade
@@ -1,9 +1,26 @@
-// VENDOR SCRIPTS
+//--------------------------/
+//-- VENDER SCRIPTS --------/
+//--------------------------/
+
 script(src="/js/libs/jquery.js")
 script(src="/js/libs/jquery.scrollTo.js")
 script(src="/js/libs/jquery.validate.js")
 script(src="/js/libs/underscore.js")
 script(src="/js/libs/moment.js")
 
-// LOCAL SCRIPTS
+
+//--------------------------/
+//-- LOCAL SCRIPTS ---------/
+//--------------------------/
+
 script(src="/js/site.js")
+
+
+
+//--------------------------/
+//-- THIRD PARTY SCRIPTS ---/
+//--------------------------/
+
+// ADD THIS
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54a73bdd30878b19" async="async"></script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54a73bdd30878b19" async="async"></script>
