--- a/public/blog/_layout.jade
+++ b/public/blog/_layout.jade
@@ -17,6 +17,7 @@ html
       section.article-content.l-negative-space
         != yield
 
+      div.addthis_sharing_toolbox.l-negative-space
 
     != partial('../_partials/blog/comments')
 
