--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -1,12 +1,7 @@
 doctype
 html
-  head
-    link(rel="stylesheet" href="css/libs/vendor.css")
-    link(rel="stylesheet" href="fonts/icomoon/style.css")
-    link(rel="stylesheet" href="css/site.css")
-    script(src="//use.typekit.net/tpn3thx.js")
-    script(type='text/javascript').
-      try{Typekit.load();}catch(e){}
+  != partial('_partials/head')
+
   body(class="background-mantle")
 
     != yield
