--- a/public/_partials/blog/comments.jade
+++ b/public/_partials/blog/comments.jade
@@ -3,7 +3,7 @@ section.article-comments.l-centered-content
     h2 Comments
 
     #disqus_thread
-    script
+    script.
       /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
       var disqus_shortname = 'unicorn-ui'; // required: replace example with your forum shortname
 
