--- a/public/index.jade
+++ b/public/index.jade
@@ -1,4 +1,4 @@
-header(class="hero" role="main")
+header(class="hero l-negative-space l-margin-bottom-160" role="main")
 	h1.animated.fadeIn Unicorn UI
 	h2.animated.fadeIn A highly customizable and production ready UI library for the web.
 
