--- a/resources/scss/module/_hero.scss
+++ b/resources/scss/module/_hero.scss
@@ -1,27 +1,40 @@
 .hero {
-  // height: 100%;
-  padding: 180px 40px;
   text-align: center;
   color: $white;
-
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 
   h1 {
     font-weight: 100;
     font-size: 60px;
-    margin: 0px 0px 10px 0px;
+    margin: 60px 0px 10px 0px;
+
+    @media handheld and (max-width: $standard-breakpoint),
+    screen and (max-device-width: $standard-breakpoint),
+    screen and (max-width: $standard-breakpoint) {
+      font-size: 40px;
+      margin: 20px 0px 10px 0px;
+    }
   }
 
   h2 {
     font-weight: 100;
     font-size: 26px;
     margin: 0px 0px 60px 0px;
+
+    @media handheld and (max-width: $standard-breakpoint),
+    screen and (max-device-width: $standard-breakpoint),
+    screen and (max-width: $standard-breakpoint) {
+      font-size: 20px;
+      margin: 0px 0px 20px 0px;
+    }
   }
 
   p {
     font-size: 18px;
+
+    @media handheld and (max-width: $standard-breakpoint),
+    screen and (max-device-width: $standard-breakpoint),
+    screen and (max-width: $standard-breakpoint) {
+      font-size: 14px;
+    }
   }
 }
