--- a/public/index.jade
+++ b/public/index.jade
@@ -11,6 +11,6 @@ header(class="hero l-negative-space l-margin-bottom-160" role="main")
 				input(type="submit" value="Let's do this!" name="subscribe" id="mc-embedded-subscribe" class="button button-royal button-raised")
 			input(type="text" class="is-hidden" name="b_8d64dfb6a9a561029375e03a8_b5db98a4bb" tabindex="-1" value="")
 
-footer.footer
-	h2.about-us Unicorn UI
-	p Copyright &copy; 2014 Unicorn-UI
+
+
+!= partial('_partials/footer', {classes: " l-pinned-bottom l-layer-1 background-ivory" })
