Major blog formatting

--- a/public/_partials/blog/comments.jade
+++ b/public/_partials/blog/comments.jade
@@ -1,6 +1,6 @@
 section.article-comments.l-centered-content
   div.l-negative-space
-    h2 Comments
+    h2 <i class="fa fa-comments-o"></i> Comments
 
     #disqus_thread
     script.
