--- a/public/_partials/head.jade
+++ b/public/_partials/head.jade
@@ -11,6 +11,7 @@ head
   link(rel="stylesheet" href="/css/libs/vendor.css")
   link(rel="stylesheet" href="/fonts/icomoon/style.css")
   link(rel="stylesheet" href="/css/site.css")
+  link(rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css")
 
   script(src="//use.typekit.net/tpn3thx.js")
   script(type='text/javascript').
