--- a/resources/scss/_options.scss
+++ b/resources/scss/_options.scss
@@ -16,6 +16,9 @@ $light: #e8edf2;
 $alice: #229ffd;
 $steel: #455A64;
 $midnight: #2c3e50;
+$cloud: #f0f5f9;
+$sea: #16a085;
+$teal: #24C6DC;
 
 /*
 * Layer Indexing
