--- a/resources/scss/_theme.scss
+++ b/resources/scss/_theme.scss
@@ -25,6 +25,6 @@
   background-color: #FFF;
 }
 
-.background-stucco {
-  background-color: #f0f5f9;
+.background-cloud {
+  background-color: $cloud;
 }
