--- a/resources/scss/builder.scss
+++ b/resources/scss/builder.scss
@@ -30,7 +30,7 @@
 @import 'module/builder/modal';
 @import 'module/builder/spectrum';
 @import 'module/builder/alert';
-@import 'module/builder/prettify';
+@import 'module/prettify';
 
 
 .page {
