--- a/public/_partials/scripts.jade
+++ b/public/_partials/scripts.jade
@@ -9,12 +9,6 @@ script(src="/js/libs/underscore.js")
 script(src="/js/libs/moment.js")
 
 
-//--------------------------/
-//-- LOCAL SCRIPTS ---------/
-//--------------------------/
-
-script(src="/js/site.js")
-
 
 
 //--------------------------/
@@ -22,5 +16,16 @@ script(src="/js/site.js")
 //--------------------------/
 
 // ADD THIS
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54a73bdd30878b19" async="async"></script>
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54a73bdd30878b19" async="async"></script>
+script(type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54a73bdd30878b19" async="async")
+script(type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54a73bdd30878b19" async="async")
+
+// PRETTIFY CODE
+script(src="https://google-code-prettify.googlecode.com/svn/loader/prettify.js")
+
+
+//--------------------------/
+//-- LOCAL SCRIPTS ---------/
+//--------------------------/
+
+script(src="/js/site.js")
+
