more updates to blog

--- a/public/_partials/blog/meta.jade
+++ b/public/_partials/blog/meta.jade
@@ -1,7 +1,7 @@
 ul.article-meta.l-right.background-cloud
-  li <strong>Length</strong> - #{meta.length}
+  li <strong>Reading Time</strong> - #{meta.length}
   li <strong>Topics</strong> - #{meta.topics}
   li <strong>Skill Level</strong> - #{meta.skill}
 
   if meta.prerequisite
-    li <strong>Required</strong> - #{meta.prerequisite}
+    li <strong>Prequisites</strong> - #{meta.prerequisite}
