--- a/public/blog/_layout.jade
+++ b/public/blog/_layout.jade
@@ -23,7 +23,7 @@ html
 
         != yield
 
-      div.addthis_sharing_toolbox.l-negative-space
+        div.addthis_sharing_toolbox
 
     != partial('../_partials/blog/comments')
     != partial('../_partials/scripts')
