--- a/resources/scss/_base.scss
+++ b/resources/scss/_base.scss
@@ -13,10 +13,10 @@ body {
   clear: both;
 }
 
-a {
-  color: #339dc7;
+// a {
+//   color: #339dc7;
 
-  &:visited {
-    color: #514a9d;
-  }
-}
+//   &:visited {
+//     color: #514a9d;
+//   }
+// }
