--- a/resources/scss/_layout.scss
+++ b/resources/scss/_layout.scss
@@ -65,7 +65,7 @@
   @media handheld and (max-width: $standard-breakpoint),
   screen and (max-device-width: $standard-breakpoint),
   screen and (max-width: $standard-breakpoint) {
-    padding: 10px;
+    padding: 40px 10px;
   }
 
   // LARGE SCREENS
