--- a/resources/scss/module/_article.scss
+++ b/resources/scss/module/_article.scss
@@ -26,6 +26,14 @@
   min-height: 280px;
   position: relative;
 
+  // MOBILE STYLES
+  @media handheld and (max-width: $standard-breakpoint),
+  screen and (max-device-width: $standard-breakpoint),
+  screen and (max-width: $standard-breakpoint) {
+    padding: 40px 20px 20px 20px;
+  }
+
+
   time {
     position: absolute;
     top: -30px;
@@ -41,6 +49,13 @@
     margin: 0px 0px 26px 0px;
     opacity: .9;
     text-shadow: 0px 0px 100px rgba($white, 1);
+
+    // MOBILE STYLES
+    @media handheld and (max-width: $standard-breakpoint),
+    screen and (max-device-width: $standard-breakpoint),
+    screen and (max-width: $standard-breakpoint) {
+      font-size: 40px;
+    }
   }
 
   .author {
@@ -49,13 +64,14 @@
     opacity: .9;
     display: inline-block;
     position: relative;
-    padding-left: 40px;
-    line-height: 30px;
-    margin: 0px;
+    padding-left: 50px;
+    line-height: 40px;
+    margin: 0px 0px 26px 0px;
+    font-size: 18px;
 
     > img {
-      width: 30px;
-      height: 30px;
+      width: 40px;
+      height: 40px;
       border-radius: 200px;
       position: absolute;
       top: 0px;
@@ -71,6 +87,13 @@
     bottom: 60px;
     z-index: $layer-1;
 
+    // MOBILE STYLES
+    @media handheld and (max-width: $standard-breakpoint),
+    screen and (max-device-width: $standard-breakpoint),
+    screen and (max-width: $standard-breakpoint) {
+      position: static;
+    }
+
     i {
       font-size: 22px;
       margin-right: 5px;
@@ -78,6 +101,14 @@
 
     .button {
       margin: 0px 10px;
+
+      // MOBILE STYLES
+      @media handheld and (max-width: $standard-breakpoint),
+      screen and (max-device-width: $standard-breakpoint),
+      screen and (max-width: $standard-breakpoint) {
+        margin: 0px 0px 20px 0px;
+        display: block;
+      }
     }
   }
 }
@@ -130,10 +161,10 @@
   > h3 {
     font-size: 24px;
     line-height: 1.2;
-    font-weight: 600;
+    font-weight: 500;
     text-transform: uppercase;
     font-family: $brand-font;
-    color: $teal;
+    color: $blueberry;
     margin: 40px 0px 10px 0px;
   }
 
@@ -141,9 +172,19 @@
   > p,
   > ul {
     line-height: 34px;
-    font-size: 20px;
+    font-size: 22px;
     font-family: $serif-font;
     margin: 0px 0px 26px 0px;
+    font-weight: 300;
+
+    code {
+      background: $cloud;
+      padding: 0px 3px;
+      border-radius: 3px;
+      font-family: $mono-font;
+      font-size: 18px;
+      color: darken($blueberry, 15%);
+    }
   }
 
   > ul li {
@@ -154,13 +195,18 @@
     }
   }
 
-
+  img {
+    max-width: 100%;
+    border-radius: 3px;
+    margin: 0px auto;
+    display: block;
+  }
 
   > figure {
     border-radius: 3px;
     background: $cloud;
     text-align: center;
-    padding: 40px 20px;
+    padding: 40px;
     margin: 0px 0px 26px 0px;
     position: relative;
 
