Viewport and Viewbox..general article tweaks

--- a/resources/scss/module/_article.scss
+++ b/resources/scss/module/_article.scss
@@ -170,7 +170,8 @@
 
 
   > p,
-  > ul {
+  > ul,
+  > ol:not(.linenums) {
     line-height: 34px;
     font-size: 22px;
     font-family: $serif-font;
