--- a/public/_partials/nav.jade
+++ b/public/_partials/nav.jade
@@ -1,7 +1,7 @@
-nav(class="main-nav l-layer-5 l-pinned-top")
-  div(class="background-mantle main-nav-stripe")
+nav(class="top-nav is-large l-layer-5 l-pinned-top")
+  div(class="background-mantle top-nav-stripe")
 
-  .main-nav-inner
+  .top-nav-inner
     h1
       a(href="/") Unicorn UI
 
