--- a/public/demo/_layout.jade
+++ b/public/demo/_layout.jade
@@ -1,6 +1,6 @@
 doctype
 html
-  != partial('_partials/head')
+  != partial('../_partials/head')
 
   body
     != partial('../_partials/nav-micro')
