--- a/public/_partials/nav-micro.jade
+++ b/public/_partials/nav-micro.jade
@@ -1,2 +1,10 @@
-nav.nav-micro.l-pinned-top
-	h1 <a href="/">Unicorn UI</a>
+nav(class="top-nav is-small l-layer-5 l-pinned-top")
+  div(class="background-mantle top-nav-stripe")
+
+  .top-nav-inner
+    h1
+      a(href="/") Unicorn UI
+
+    ul
+      li
+        a(href="/blog/#{slug}") Return to Article <i class="fa fa-angle-double-right"></i>
