update to sass ol list
Linums will never be effected since this class only targets direct
descendants. linenums are always nested in pre/code tags so this does
not apply.

--- a/resources/scss/module/_article.scss
+++ b/resources/scss/module/_article.scss
@@ -171,7 +171,7 @@
 
   > p,
   > ul,
-  > ol:not(.linenums) {
+  > ol {
     line-height: 34px;
     font-size: 22px;
     font-family: $serif-font;
