--- a/resources/scss/module/_article.scss
+++ b/resources/scss/module/_article.scss
@@ -58,6 +58,21 @@
     }
   }
 
+  > h2 {
+    font-weight: 200;
+    font-size: 20px;
+    text-transform: uppercase;
+    margin: -16px 0px 26px 0px;
+    opacity: .9;
+
+    // MOBILE STYLES
+    @media handheld and (max-width: $standard-breakpoint),
+    screen and (max-device-width: $standard-breakpoint),
+    screen and (max-width: $standard-breakpoint) {
+      font-size: 20px;
+    }
+  }
+
   .author {
     text-align: center;
     font-weight: 200;
@@ -130,7 +145,7 @@
     padding: 40px;
     margin: 0px 0px 0px 20px;
     list-style-type: none;
-    font-size: 12px;
+    font-size: 13px;
     font-family: $brand-font;
     line-height: 1.3;
     color: darken($cloud, 60%);
