--- a/public/_partials/nav-micro.jade
+++ b/public/_partials/nav-micro.jade
@@ -5,6 +5,6 @@ nav(class="top-nav is-small l-layer-5 l-pinned-top")
     h1
       a(href="/") Unicorn UI
 
-    ul
-      li
-        a(href="/blog/#{slug}") Return to Article <i class="fa fa-angle-double-right"></i>
+    if article
+      ul
+        li <a href="#{article}">Return to Article <i class="fa fa-angle-double-right"></i></a>
