vendor manual, text clamp, card styles

--- a/public/_partials/blog/card.jade
+++ b/public/_partials/blog/card.jade
@@ -1,6 +1,6 @@
 if slug != "index"
-	.card
-		header
+	.card.c4
+		header.background-mantle
 			h2 <a href="#{slug}.html">#{article.title}</a>
 			h3 #{article.author}
 
