--- a/public/_partials/scripts.jade
+++ b/public/_partials/scripts.jade
@@ -7,6 +7,7 @@ script(src="/js/libs/jquery.scrollTo.js")
 script(src="/js/libs/jquery.validate.js")
 script(src="/js/libs/underscore.js")
 script(src="/js/libs/moment.js")
+script(src="/js/libs/clamp.js")
 
 
 
