--- a/public/blog/_layout-plain.jade
+++ b/public/blog/_layout-plain.jade
@@ -2,9 +2,14 @@ doctype
 html
   != partial('../_partials/head')
 
-  body(class="background-stucco l-padding-top-160")
+  body(class="background-stucco l-padding-top-80")
     != partial('../_partials/nav')
+
+    header.hero.background-mantle.l-padding-20
+      h1 #{title}
+      h2 #{subtitle}
 
     != yield
 
     != partial('../_partials/footer')
+    != partial('../_partials/scripts')
