--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -2,6 +2,7 @@ doctype
 html
   != partial('_partials/head')
 
-  body(class="background-mantle")
+  body(class="#{background}")
+    != partial('_partials/nav-micro')
 
     != yield
