--- a/public/_partials/blog/card.jade
+++ b/public/_partials/blog/card.jade
@@ -1,6 +1,6 @@
 if slug != "index"
-	.card.c4
-		header.background-mantle
+	.card
+		header
 			h2 <a href="#{slug}.html">#{article.title}</a>
 			h3 #{article.author}
 
