--- a/public/_partials/nav-micro.jade
+++ b/public/_partials/nav-micro.jade
@@ -5,6 +5,14 @@ nav(class="top-nav is-small l-layer-5 l-pinned-top")
     h1
       a(href="/") Unicorn UI
 
-    if article
-      ul
+    ul
+      if article
         li <a href="#{article}">Return to Article <i class="fa fa-angle-double-right"></i></a>
+
+      li
+        a(href="/about") About
+
+      li
+        a(href="/blog") Blog
+
+
