--- a/resources/scss/_base.scss
+++ b/resources/scss/_base.scss
@@ -13,10 +13,11 @@ body {
   clear: both;
 }
 
-// a {
-//   color: #339dc7;
-
-//   &:visited {
-//     color: #514a9d;
-//   }
-// }
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: "";
+  clear: both;
+  height: 0;
+}
