--- a/resources/scss/module/_cards.scss
+++ b/resources/scss/module/_cards.scss
@@ -1,15 +1,28 @@
 .card {
   @include layer(2);
   background: $white;
+  float: left;
+  margin: 30px;
+  width: 280px;
+
+  &:nth-child(3n-3) {
+    margin-right: 0;
+  }
+
+  &:nth-child(3n+1) {
+    margin-left: 0;
+  }
 
   header {
-    padding: 20px;
+    padding: 30px;
     color: $white;
     text-align: center;
+    background: $blueberry;
 
     h2,
     h3 {
       font-weight: 200;
+      margin: 0px;
     }
 
     h2 {
@@ -31,7 +44,8 @@
   }
 
   .card-body {
-    padding: 40px;
+    padding: 30px;
+    color: $steel;
 
     p {
       line-height: 24px;
@@ -44,6 +58,7 @@
   }
 
   footer {
-
+    padding: 10px 20px;
+    color: $gray;
   }
 }
